# spbu-Linux

./: .swp  README.md
course 2/: ReadMe.md
course 2/Audit/: Audit.cpp  Audit.docx  Audit.odg  ReadMe.md  audit  audit_2  constant.h
course 2/ChessBot/: .~lock.Chess_bot.odt#  Chess_bot.docx  Chess_bot.odt  chess  (+4 more)
scripts/8 conspect/3/: 3.txt  meson.build
scripts/8 conspect/4/unistdx-master/: .gitignore  .pre-commit-config.yaml  README.org  meson.build  meson_options.txt  support.org
scripts/8 conspect/4/unistdx-master/ci/: channels.scm  check-that-all-headers-are-installed  clang-tidy.scm  manifest.scm  meson.build  slurm  valgrind.scm
scripts/8 conspect/4/unistdx-master/src/: meson.build
scripts/8 conspect/4/unistdx-master/src/dwx/: dw  dw.cc  meson.build
scripts/8 conspect/4/unistdx-master/src/unistdx/: config.in  forward  meson.build
scripts/8 conspect/4/unistdx-master/src/unistdx/base/: array_view  bad_call  bad_call.cc  bad_call_test.cc  base64  base64.cc  byte_buffer  byte_buffer.cc  byte_buffer_test.cc  check  command_line  command_line.cc  command_line_test.cc  contracts  delete_each  delete_each_test.cc  flag  flag_test.cc  ios_guard  log_message  log_message_test.cc  make_object  meson.build  packetbuf  recursive_spin_mutex  sha1  sha1.cc  sha1_benchmark.cc  sha1_test.cc  sha2  sha2.cc  sha2_test.cc  simple_lock  spin_mutex  spin_mutex_test.cc  streambuf_traits  string  string.cc  string_test.cc  types  (+9 more)
scripts/8 conspect/4/unistdx-master/src/unistdx/bits/: addr_parse  byte_swap_chooser  debug_message  for_each_file_descriptor  interface_addresses  macros  make_object  meson.build  mman  no_copy_and_move  octet  open_flag  poll  process  safe_calls  safe_calls.cc  socket  uint128_parse
scripts/8 conspect/4/unistdx-master/src/unistdx/doxygen/: Doxyfile.in  meson.build
scripts/8 conspect/4/unistdx-master/src/unistdx/fs/: canonical_path  canonical_path_test.cc  const_path  copy_file  copy_file.cc  copy_file_test.cc  directory  directory_entry  dirstream  file_attributes  file_attributes_test.cc  file_mode  file_mode.cc  file_mode_test.cc  file_mutex  file_mutex.cc  file_mutex_test.cc  file_status  file_status.cc  file_status_test.cc  file_system_status  file_system_status_test.cc  file_type  file_type.cc  file_type_test.cc  idirectory  idirectory_test.cc  idirtree  idirtree_test.cc  meson.build  mkdirs  mkdirs.cc  mkdirs_test.cc  odirectory  odirtree  odirtree.cc  path  path.cc  path_flag  path_test.cc  (+4 more)
scripts/8 conspect/4/unistdx-master/src/unistdx/io/: epoll_event  epoll_event.cc  epoll_event_test.cc  event_file_descriptor  fd_type  fdstream  fildes  fildes.cc  fildes_pair  fildes_test.cc  fildesbuf  fildesbuf_test.cc  memory_mapping  memory_mapping_benchmark.cc  memory_mapping_test.cc  meson.build  open_flag  pipe  pipe.cc  pipe_test.cc  poll_event  poll_event.cc  poll_event_test.cc  poller  poller_test.cc  shared_byte_buffer  shared_byte_buffer.cc  shared_byte_buffer_test.cc  sysstream  terminal  two_way_pipe  two_way_pipe.cc  two_way_pipe_test.cc
scripts/8 conspect/4/unistdx-master/src/unistdx/ipc/: argstream  cpu_set  cpu_set.cc  execute  execute_test.cc  futex  futex_test.cc  identity  identity.cc  identity_stub_test.cc  identity_test.cc  meson.build  process  process.cc  process_group  process_group.cc  process_group_test.cc  process_semaphore  process_status  process_status.cc  process_status_test.cc  process_test.cc  semaphore  semaphore_test.cc  shared_memory_segment  shared_memory_segment_test.cc  shmembuf  signal  signal.cc  signal_test.cc  sysv_semaphore_test.cc  thread_semaphore
scripts/8 conspect/4/unistdx-master/src/unistdx/it/: basic_istream_iterator  basic_ostream_iterator  cstring_iterator  cstring_iterator_test.cc  field_iterator  field_iterator_test.cc  intersperse_iterator  iterator_pair  meson.build
scripts/8 conspect/4/unistdx-master/src/unistdx/net/: base64_test.cc  bit_count  bit_count_test.cc  bridge_interface  bridge_interface.cc  bstream  byte_order  byte_swap  byte_swap_test.cc  bytes  bytes_test.cc  endian_test.cc  ethernet_address  ethernet_address.cc  ethernet_address_test.cc  family  family.cc  family_test.cc  hosts  hosts.cc  hosts_test.cc  interface_address  interface_address_iterator  interface_address_test.cc  interface_addresses  interface_socket_address  interface_socket_address_test.cc  ipaddr_traits  ipv4_address  ipv4_address.cc  ipv4_address_test.cc  ipv4_socket_address  ipv4_socket_address.cc  ipv6_address  ipv6_address.cc  ipv6_socket_address  ipv6_socket_address.cc  meson.build  netlink_attribute_iterator  netlink_message_iterator  (+21 more)
scripts/8 conspect/4/unistdx-master/src/unistdx/site/: advanced.md  api.md  execute-child-process.md  howto.md  index.md  meson.build  site.scm  tutorials.md
scripts/8 conspect/4/unistdx-master/src/unistdx/stub/: backtrace_symbols_stub.cc  backtrace_symbols_stub_2.cc  copy_file_range_stub.cc  meson.build  sendfile_stub.cc  setgid_stub.cc  sysconf_stub.cc
scripts/8 conspect/4/unistdx-master/src/unistdx/system/: backtrace_test.cc  call  clock  clock_test.cc  error  error.cc  error_test.cc  linker  linker.cc  log  log_test.cc  meson.build  nss  nss.cc  resource  resource.cc  resource_test.cc  security  security.cc  security_test.cc  time  users_test.cc
scripts/8 conspect/4/unistdx-master/src/unistdx/test/: arguments  base  bstream_insert_extract  color  colors.cc  config.in  coverage.in  datum  empty.cc  exception  gcov-tool.in  kernelbuf  language  main.cc  meson.build  mutex  operator  pivot_root_test.cc  posix_test.cc  print_flags  properties  random_buffer  random_string  random_string.cc  sanitize_file_descriptors  sanitize_file_descriptors.cc  semaphore  temporary_file  test_executor  test_executor.cc  tmpdir  unshare_test.cc
scripts/8 conspect/4/unistdx-master/src/unistdx/util/: backtrace  group  groupstream  meson.build  system  user  userstream
scripts/8 conspect/4/unistdx-master/src/unwindx/: meson.build  unwind  unwind.cc
scripts/8 conspect/4/unistdx-master/src/valgrind/: config.in  meson.build
Задания от Жасура/: JScript1.sh  README.md  ReadME.txt.txt
(+122 files in other folders)
