libunistdx_src += files([
    'safe_calls.cc'
])

install_headers(
    'addr_parse',
    'byte_swap_chooser',
    'for_each_file_descriptor',
    'interface_addresses',
    'macros',
    'make_object',
    'no_copy_and_move',
    'octet',
    'open_flag',
    'poll',
    'process',
    'safe_calls',
    'socket',
    'uint128_parse',
    subdir: join_paths(meson.project_name(), 'bits')
)
