install_headers(
    'basic_istream_iterator',
    'basic_ostream_iterator',
    'cstring_iterator',
    'field_iterator',
    'intersperse_iterator',
    'iterator_pair',
    subdir: join_paths(meson.project_name(), 'it')
)

libunistdx_tests += files(['cstring_iterator_test.cc','field_iterator_test.cc'])
