libunistdx_src += files([
    'bridge_interface.cc',
    'ethernet_address.cc',
    'family.cc',
    'hosts.cc',
    'ipv4_address.cc',
    'ipv4_socket_address.cc',
    'ipv6_address.cc',
    'ipv6_socket_address.cc',
    'netlink_poller.cc',
    'netlink_socket_address.cc',
    'network_interface.cc',
    'socket_address.cc',
    'socket.cc',
    'unix_socket_address.cc',
    'veth_interface.cc',
])

install_headers(
    'bit_count',
    'bridge_interface',
    'bstream',
    'byte_order',
    'byte_swap',
    'bytes',
    'ethernet_address',
    'family',
    'hosts',
    'interface_address',
    'interface_address_iterator',
    'interface_addresses',
    'interface_socket_address',
    'ipaddr_traits',
    'ipv4_address',
    'ipv4_socket_address',
    'ipv6_address',
    'ipv6_socket_address',
    'netlink_socket',
    'netlink_socket_address',
    'network_interface',
    'socket',
    'socket_address',
    'subnet_iterator',
    'unix_socket_address',
    'veth_interface',
    subdir: join_paths(meson.project_name(), 'net')
)

libunistdx_tests += files([
    'base64_test.cc',
    'bit_count_test.cc',
    'byte_swap_test.cc',
    'bytes_test.cc',
    'ethernet_address_test.cc',
    'endian_test.cc',
    'hosts_test.cc',
    'family_test.cc',
    'interface_address_test.cc',
    'interface_socket_address_test.cc',
    'ipv4_address_test.cc',
    'netlink_poller_test.cc',
    'network_interface_test.cc',
    'socket_test.cc',
    'socket_address_test.cc',
    'veth_interface_test.cc',
    ])
