backtrace_symbols_stub = shared_library(
    'backtrace_symbols_stub',
    sources: 'backtrace_symbols_stub.cc'
)

backtrace_symbols_stub_2 = shared_library(
    'backtrace_symbols_stub_2',
    sources: 'backtrace_symbols_stub_2.cc',
    include_directories: src,
)

setgid_stub = shared_library(
    'setgid_stub',
    sources: 'setgid_stub.cc'
)

copy_file_range_stub = shared_library(
    'copy_file_range_stub',
    sources: 'copy_file_range_stub.cc'
)

sendfile_stub = shared_library(
    'sendfile_stub',
    sources: 'sendfile_stub.cc'
)

sysconf_stub = shared_library(
    'sysconf_stub',
    sources: 'sysconf_stub.cc'
)
